# Vietnamese-Sentiment-from-Word2Vec-RNN-LSTM-to-PhoBERT

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  engine.py  pyproject.toml  requirements-dev.txt  requirements.txt  result_objects.pkl  result_objects_old.pkl  run.py  run.sh  setup.py  test_results.txt  visualization.py  visualization_result.ipynb
.github/workflows/: ci.yml
configs/: config.yaml
configs/experiment/: cnn_baseline.yaml  lstm_baseline.yaml  phobert_baseline.yaml
data/: dataset_builder.py  vietnamese_eda.py
docs/: api.md  conf.py  index.md
legacy/: interactive.ipynb
models/: cnn.py  hf_wrapper.py  hybrid_cnn_lstm.py  lstm.py  phow2vec.py
scripts/: deploy.sh  run_tests.sh  setup.sh
tests/: __init__.py  test_data.py  test_models.py
